--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "license": "MIT",
   "dependencies": {
     "async": "^0.9.0",
+    "inquirer": "^0.8.2",
     "jxon": "^1.3.1",
     "lodash": "^3.3.1",
+    "minimist": "^1.1.1",
     "request": "^2.53.0"
   }
 }
